k8s/sconia-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sconia-api-nodeport
  labels:
    app: sconia-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
    nodePort: 30080
  selector:
    app: sconia-api
